--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Probni sajt</title>
+    
 </head>
 <body>
-    <h1>Vezba za Git</h1>
+    <h1>Vezba za Git2 (izmenjen naslov)</h1>
     <p>Prvi fajl na Githubu.</p>
+    <p>ovo je novi dodati pasus</p>
 </body>
 </html>
