dodata slika i tekst na index i napralvjena galerija na pomocni

--- a/index.html
+++ b/index.html
@@ -14,19 +14,27 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="pomocni.html">Strana 2</a>
-          </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="pomocni.html">galerija</a>
+            </li>
         </ul>
-      </nav>
-      <div class="container mt-4">
+    </nav>
+    <div class="container mt-4">
         <h1 class="display-1">O Meni</h1>
+    </div>
+    <div class="row ml-2">
+        <div class="col-3">
+            <img src="./kyubi.jpg" alt="">
+        </div>
+        <div class="col-7 offset-1 border border-dark border-lg">
+            <p>Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. 
+            </p>
+        </div>
+    </div>
 
-      </div>
-        
-</body> 
+</body>
 
 </html>
