--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="pomocni.html">galerija</a>
+                <a class="nav-link" href="pomocni.html">Galerija</a>
             </li>
         </ul>
     </nav>
