--- a/index.html
+++ b/index.html
@@ -5,30 +5,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <title>Index</title>
 
 </head>
 
 <body>
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapseid">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-    
-                <div class="collapse navbar-collapse" id="collapseid">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="galerija.html">Galerija</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="kontakt.html">Kontakt</a>
-            </li>
-        </ul>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapseid">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="collapseid">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="galerija.html">Galerija</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="kontakt.html">Kontakt</a>
+                </li>
+            </ul>
+        </div>
     </nav>
     <div class="container mt-4">
         <h1 class="display-1">O Meni</h1>
@@ -55,7 +58,7 @@
                     meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je
                     tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni.
                     Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o
-                    meni. Ovo je tekst o meni.                  
+                    meni. Ovo je tekst o meni.
                 </p>
             </div>
         </div>
