zavrsen rad za danas

--- a/index.html
+++ b/index.html
@@ -18,20 +18,41 @@
                 <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="pomocni.html">Galerija gal</a>
+                <a class="nav-link" href="galerija.html">Galerija</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="kontakt.html">Kontakt</a>
             </li>
         </ul>
     </nav>
     <div class="container mt-4">
         <h1 class="display-1">O Meni</h1>
     </div>
-    <div class="row ml-2">
-        <div class="col-3">
-            <img src="./kyubi.jpg" alt="">
-        </div>
-        <div class="col-7 offset-1 border border-dark border-lg">
-            <p>Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. 
-            </p>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4 col-md-6">
+                <img src="./kyubi.jpg" alt="" style="width: 100%">
+            </div>
+            <div class="col-lg-8 col-md-5 border border-dark border-lg">
+                <p>Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o
+                    meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je
+                    tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni.
+                    Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o
+                    meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je
+                    tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni.
+                    Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o
+                    meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je
+                    tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni.
+                    Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o
+                    meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je
+                    tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni.
+                    Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o
+                    meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je
+                    tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni.
+                    Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o
+                    meni. Ovo je tekst o meni.                  
+                </p>
+            </div>
         </div>
     </div>
 
