--- a/galerija.html
+++ b/galerija.html
@@ -17,7 +17,12 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapseid">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            
+                <div class="collapse navbar-collapse" id="collapseid">
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="index.html">O meni</a>
