--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapseid">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+    
+                <div class="collapse navbar-collapse" id="collapseid">
         <ul class="navbar-nav">
             <li class="nav-item active">
                 <a class="nav-link" href="index.html">Home</a>
