--- a/kontakt.html
+++ b/kontakt.html
@@ -20,6 +20,11 @@
 
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapseid">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            
+                <div class="collapse navbar-collapse" id="collapseid">
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="index.html">Home</a>
