dodaa prilagodljivost i izmenjen tekst

--- a/index.html
+++ b/index.html
@@ -6,15 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <title>Index</title>
+<style>
 
+    pre{
+        font-family: sans-serif;
+        font-size: 16px;
+        line-height: 1.5;
+        margin-top: 0px;
+        margin-bottom: 1rem;
+    }
+
+</style>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapseid">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,7 +32,7 @@
         <div class="collapse navbar-collapse" id="collapseid">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="index.html">O Meni</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="galerija.html">Galerija</a>
@@ -33,8 +43,8 @@
             </ul>
         </div>
     </nav>
-    <div class="container mt-4">
-        <h1 class="display-1">O Meni</h1>
+    <div class="container mt-5">
+        <h1 class="display-1 pt-3">O Meni</h1>
     </div>
     <div class="container">
         <div class="row">
@@ -42,24 +52,31 @@
                 <img src="./kyubi.jpg" alt="" style="width: 100%">
             </div>
             <div class="col-lg-8 col-md-5 border border-dark border-lg">
-                <p>Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o
-                    meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je
-                    tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni.
-                    Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o
-                    meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je
-                    tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni.
-                    Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o
-                    meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je
-                    tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni.
-                    Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o
-                    meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je
-                    tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni.
-                    Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o
-                    meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je
-                    tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni.
-                    Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o meni. Ovo je tekst o
-                    meni. Ovo je tekst o meni.
-                </p>
+                <h5>Lični podaci</h5>
+                <p>Ime: Andrej Kavčić</p>
+                <p>Datum rodjenja: 24.02.1985.</p>
+                <p>Mesto rodjenja: Beograd</p>
+                <p>Adresa: Visoka 16</p>
+                <p>Telefon: 063/339-236</p>
+                <p>E-mail: Andrej.Kavcic85@gmail.com</p>
+                <br>
+                <h5>Obrazovanje</h5>
+                <p>2004 – 2011. Univerzitet Megatrend, Fakultet za poslovne studije, Beograd,
+             Smer - Kompjuterski inženjering,
+             Stečeno zvanje - Diplomirani ekonomista</p>
+                <p>2000 – 2004. IX beogradska gimnazija </p>
+                <br>
+                <h5>Dodatno obrazovanje</h5>
+                <p>1998 – 2004. Institut za strane jezike, Beograd
+                    Kurs engleskog jezika - od početnog do višeg</p>
+                <p>2003 – 2004. University of Cambridge, Cambridge, UK</p>
+                <p>Nov. 2003. Preliminary English Test (ESOL) – Pass with Merit</p>
+                <p>Jun 2004. FCE – First Certificate in English (ESOL) – Grade B </p>
+                <br>
+                <h5>Radno iskustvo </h5>
+                <p>2017 – trenutno. Air Serbia, Putnički i distibucioni sistemi, Menadžer korisniče podrške</p>
+                <p>2015 – 2017. Air Serbia, Kontakt Centar, Specijalista za kvalitet i učinak</p>
+                <p>2012 – 2015. Air Serbia, Kontakt centar, Agent prodaje</p>
             </div>
         </div>
     </div>
