--- a/galerija.html
+++ b/galerija.html
@@ -41,7 +41,7 @@
     </nav>
     <div class="container mt-5">
         <div class="row mt-5">
-            <div class="col-3 mt-2">
+            <div class="col-sm-6 col-md-4 col-lg-3 mt-2">
                 <img src="1.jpg" style="width:100%">
                 <img src="2.jpg" style="width:100%">
                 <img src="3.jpg" style="width:100%">
@@ -51,7 +51,7 @@
                 <img src="1.jpg" style="width:100%">
             </div>
 
-            <div class="col-3 mt-2">
+            <div class="col-sm-6 col-md-4 col-lg-3 mt-2">
                 <img src="3.jpg" style="width:100%">
                 <img src="4.jpg" style="width:100%">
                 <img src="5.jpg" style="width:100%">
@@ -61,7 +61,7 @@
                 <img src="3.jpg" style="width:100%">
             </div>
 
-            <div class="col-3 mt-2">
+            <div class="col-sm-6 col-md-4 col-lg-3 mt-2">
                 <img src="5.jpg" style="width:100%">
                 <img src="6.jpg" style="width:100%">
                 <img src="1.jpg" style="width:100%">
@@ -71,7 +71,7 @@
                 <img src="1.jpg" style="width:100%">
             </div>
 
-            <div class="col-3 mt-2">
+            <div class="col-sm-6 col-md-4 col-lg-3 mt-2">
                 <img src="6.jpg" style="width:100%">
                 <img src="3.jpg" style="width:100%">
                 <img src="1.jpg" style="width:100%">
