--- a/kontakt.html
+++ b/kontakt.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <title>Kontakt</title>
     <style>
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapseid">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="collapseid">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="index.html">O Meni</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="galerija.html">Galerija</a>
@@ -41,8 +41,10 @@
 
     <div class="container mt-4">
         <div class="row mt-4">
-            <div class="col-6 mt-4"><img src="7.jpg" alt="" style="width: 100%"></div>
-            <div class="col-6">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 mt-4">
+                <img src="7.jpg" alt="" style="width: 100%">
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
                 <form class="">
 
                     <p class="h4 mt-4 mb-4 text-center pt-5">Ostavite poruku</p>
